# cargo-crate-api

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  typos.toml
.github/: settings.yml
.github/workflows/: ci.yml  rust-next.yml
crates/cargo-api/: Cargo.toml
crates/cargo-api/src/: args.rs  main.rs  report.rs
crates/cargo-crate-api/: Cargo.toml
crates/cargo-crate-api/src/: args.rs  main.rs  report.rs
crates/crate-api/: Cargo.toml
crates/crate-api/src/: api.rs  diff.rs  error.rs  lib.rs  manifest.rs  rustdoc.rs
crates/crate-api/tests/: diff_api.rs  rustdoc_dump_api.rs  rustdoc_dump_raw.rs
crates/fs-snapshot/: Cargo.toml
crates/fs-snapshot/src/: color.rs  harness.rs  lib.rs
crates/rustdoc-json-types-fork/: Cargo.toml
crates/rustdoc-json-types-fork/src/: lib.rs
docs/: faq.md
fixtures/: Cargo.toml
fixtures/addition/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/addition/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/addition_path/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/addition_path/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/addition_use/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/addition_use/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/bounds/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/bounds/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/circular/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/circular/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/consts/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/consts/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/dep_upgrade/: diff.json
fixtures/dep_upgrade/dep_new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/dep_upgrade/dep_old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/dep_upgrade/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/dep_upgrade/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/enums/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/enums/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/func/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/func/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/func_local_items/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/func_local_items/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/infer/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/infer/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/infer_regress/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/infer_regress/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/inherent_impls/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/inherent_impls/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/issue_34/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/issue_34/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/issue_50/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/issue_50/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/kind_change/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/kind_change/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/macros/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/macros/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/max_priv/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/max_priv/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/mix/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/mix/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/pathologic_paths/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/pathologic_paths/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/pub_use/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/pub_use/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/regions/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/regions/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/removal/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/removal/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/removal_cargo_feature/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/removal_cargo_feature/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/removal_cargo_feature_dep/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/removal_cargo_feature_dep/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/removal_path/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/removal_path/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/removal_use/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/removal_use/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/sealed_traits/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/sealed_traits/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/structs/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/structs/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/swap/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/swap/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/trait_impls/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/trait_impls/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/trait_objects/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/trait_objects/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/traits/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/traits/old/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/ty_alias/new/: Cargo.toml  rustdoc-api.json  rustdoc-raw.json
fixtures/ty_alias/old/: Cargo.toml  (+2 more)
(+14 files in other folders)
