[package]
name = "cargo-crate-api"
description = "Interact with the crate's API"
version = "0.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/cargo-crate-api.git"
homepage = "https://github.com/crate-ci/cargo-crate-api"
documentation = "https://github.com/crate-ci/cargo-crate-api"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
edition = "2021"
rust-version = "1.57.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[dependencies]
structopt = {version = "0.3.25", default-features = false}
clap-cargo = { version = "0.7", features = ["cargo_metadata"] }
clap-verbosity-flag = "0.3"
log = "0.4"
env_logger = "0.9"
proc-exit = "1"
eyre = "0.6"
human-panic = "1"
yansi = "0.5.0"
concolor-control = { version = "0.0.7" }
concolor-clap = { version = "0.0.6", features = ["api_unstable"] }
termtree = "0.2.4"

cargo_metadata = "0.14"
rustdoc-json-types-fork = { version = "0.0.1", path = "../rustdoc-json-types-fork" }
crate-api = { version = "0.0.1", path = "../crate-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

git2 = { version = "0.13", default-features = false, features = ["vendored-libgit2"] }
