[package]
name = "crate-api"
description = "Interact with the crate's API"
version = "0.1.0"
license = "MIT OR Apache-2.0"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
edition = "2021"
rust-version = "1.57.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[dependencies]
toml_edit = "0.12"
cargo_metadata = "0.14"
rustdoc-json-types-fork = { version = "0.1", path = "../rustdoc-json-types-fork" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
fs-snapshot = { path = "../fs-snapshot" }
tempfile = "3.0"

[[test]]
name = "rustdoc_dump_raw"
harness = false

[[test]]
name = "rustdoc_dump_api"
harness = false
