[package]
name = "crate-api"
description = "Interact with the crate's API"
version = "0.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/cargo-api.git"
homepage = "https://github.com/crate-ci/cargo-api"
documentation = "https://docs.rs/crate-api"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
edition = "2021"
rust-version = "1.57.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[dependencies]
toml_edit = "0.12"
cargo_metadata = "0.14"
semver = "1.0"
rustdoc-types = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
fs_snapshot = "0.1.1"
tempfile = "3.0"

[[test]]
name = "rustdoc_dump_raw"
harness = false

[[test]]
name = "rustdoc_dump_api"
harness = false

[[test]]
name = "diff_api"
harness = false
