[package]
name = "crate-api"
description = "Interact with the crate's API"
version = "0.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/cargo-crate-api.git"
homepage = "https://github.com/crate-ci/cargo-crate-api"
documentation = "https://docs.rs/crate-api"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
edition = "2021"
rust-version = "1.57.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*",
  "tests/**/*",
]

[dependencies]
toml_edit = "0.13"
cargo_metadata = "0.14"
semver = "1.0"
rustdoc-json-types-fork = { version = "0.0.1", path = "../rustdoc-json-types-fork" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
fs_snapshot = "0.1.2"
tempfile = "3.3"

[[test]]
name = "rustdoc_dump_raw"
harness = false

[[test]]
name = "rustdoc_dump_api"
harness = false

[[test]]
name = "diff_api"
harness = false
