[package]
name = "fs-snapshot"
version = "0.0.1"
description = "Simple input/output file snapshotting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/cargo-api.git"
homepage = "https://github.com/crate-ci/cargo-api"
documentation = "http://docs.rs/fs-snapshot/"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["cli", "test", "assert", "command"]
edition = "2021"
rust-version = "1.57.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]
publish = false

[package.metadata.docs.rs]
all-features = true

[package.metadata.release]
release = false

[features]
default = ["color-auto", "diff"]
color = ["yansi", "concolor-control/std"]
color-auto = ["color", "concolor-control/auto"]
diff = ["difflib"]

[dependencies]
libtest-mimic = "0.3.0"
ignore = "0.4"
normalize-line-endings = "0.3.0"

yansi = { version = "0.5.0", optional = true }
concolor-control = { version = "0.0.7", optional = true }

difflib = { version = "0.4", optional = true }
