# See https://raw.githubusercontent.com/rust-lang/rust/1.57.0/src/rustdoc-json-types/Cargo.toml
[package]
name = "rustdoc-json-types-fork"
description = "Interact with the crate's API"
version = "0.1.0"
license = "MIT OR Apache-2.0"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
edition = "2021"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
