# See https://raw.githubusercontent.com/rust-lang/rust/1.57.0/src/rustdoc-json-types/Cargo.toml
[package]
name = "rustdoc-json-types-fork"
description = "Interact with the crate's API"
version = "0.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/cargo-api.git"
homepage = "https://github.com/crate-ci/cargo-api"
documentation = "http://docs.rs/rustdoc-json-types-fork/"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
edition = "2021"
rust-version = "1.57.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
